# 4wd-car

./: .gitignore  README.md
docs/: architecture.md  startup-and-deployment.md  wiring.md
firmware/pico_motor_controller/: CMakeLists.txt
firmware/pico_motor_controller/include/: motor_config.h
firmware/pico_motor_controller/src/: main.cpp
host/robot_control/: README.md  robot_control.py
scripts/: build_firmware.ps1  send_stop.py
